@@ -1,5 +1,8 @@
 2011-08-02  Jason Merrill  <jason@redhat.com>
 
+	PR c++/49593
+	* pt.c (find_parameter_packs_r): Handle CONSTRUCTOR.
+
 	PR c++/49803
 	* init.c (sort_mem_initializers): Initialize uses_unions_p here.
 	(build_field_list): Not here.
